--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "nodemon": "^1.18.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-responsive-carousel": "^3.1.41",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
